--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "sails": "^1.0.2",
     "sails-hook-apianalytics": "^2.0.0",
     "sails-hook-organics": "^0.14.5",
-    "sails-hook-orm": "^2.0.0-16",
+    "sails-hook-orm": "^2.1.0",
     "sails-hook-sockets": "^1.5.3"
   },
   "devDependencies": {
